# diagrams

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  autogen.sh  config.py  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml  pre-commit.yml  test.yml
diagrams/: __init__.py
diagrams/custom/: __init__.py
diagrams/embedded/: __init__.py  device.py  devtools.py  general.py  identity.py  network.py  place.py  security.py  storage.py  user.py
docs/nodes/: alibabacloud.md  aws.md  azure.md  digitalocean.md  elastic.md  embedded.md  firebase.md  gcp.md  generic.md  ibm.md  k8s.md  oci.md  onprem.md  openstack.md  outscale.md  programming.md  saas.md
scripts/: generate.py  resource.py
tests/: test_diagram.py
