[tool.poetry]
name = "diagrams"
version = "0.23.3"
description = "Diagram as Code"
license = "MIT"
authors = ["mingrammer <mingrammer@gmail.com>"]
readme = "README.md"
homepage = "https://diagrams.mingrammer.com"
repository = "https://github.com/mingrammer/diagrams"
include = ["resources/**/*"]

[tool.poetry.dependencies]
python = "^3.7"
graphviz = ">=0.13.2,<0.21.0"
jinja2 = ">=2.10,<4.0"
contextvars = { version = "^2.4", python = "~3.6" }
typed-ast = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pylint = "^2.7"
rope = "^0.14.0"
isort = "^4.3"
black = "^22.12.0"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "--strict-markers"
markers = "subscript"

[tool.coverage.run]
branch = true
source = ["diagrams/__init__.py"]
omit = [
    "tests/*",
    ".tox/*",
    "diagrams/oci/*",
    "diagrams/saas/*",
    "diagrams/openstack/*",
    "diagrams/custom/*",
    "diagrams/firebase/*",
    "diagrams/onprem/*",
    "diagrams/alibabacloud/*",
    "diagrams/outscale/*",
    "diagrams/azure/*",
    "diagrams/gcp/*",
    "diagrams/embedded/*",
    "diagrams/k8s/*",
    "diagrams/digitalocean/*",
    "diagrams/base/*",
    "diagrams/ibm/*",
    "diagrams/programming/*",
    "diagrams/elastic/*",
    "diagrams/aws/*",
    "diagrams/generic/*",
]

[tool.coverage.paths]
source = ["diagrams/__init__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise AssertionError",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]
